--- a/trunk/WacERP/plugins/WacBaseAppPlugin/config/view.yml
+++ b/trunk/WacERP/plugins/WacBaseAppPlugin/config/view.yml
@@ -37,7 +37,6 @@ default:
     jquery.cookie: /WacBaseAppPlugin/js/jquery/jquery-1.5/jquery.cookie.js     # jquery.cookie
     jquery.hotkeys: /WacBaseAppPlugin/js/jquery/jquery-1.5/jquery.hotkeys.js     # jquery.hotkeys
 
-
     wac.configuration: /wacConfiguration/getFrontendEnvSetting/dataFormat/pureText  # Load WAC Ria frontend environment vars
 
 #    jquery.ui: /WacBaseAppPlugin/js/jquery/plugins/jquery-ui-1.8.8.custom/jquery-ui-1.8.8.custom.min.js     # jquery-ui
@@ -45,22 +44,20 @@ default:
     jquery.ui: /WacBaseAppPlugin/js/jquery/plugins/jquery-ui-1.8.9.custom/jquery-ui-1.8.9.custom.min.js     # jquery-ui
     jquery.ui.i18n: /WacBaseAppPlugin/js/jquery/plugins/jquery-ui-1.8.9.custom/jquery-ui-i18n.js     # jquery-ui-i18n
 
+    jquery.shout: /WacBaseAppPlugin/js/jquery/plugins/jquery-shout/jquery.shout.js     # jquery-shout
+    jquery.prop-i18n: /WacBaseAppPlugin/js/jquery/plugins/jquery.prop-i18n/jquery.i18n.properties.js  #jquery.i18n.properties
     jquery.layout: /WacBaseAppPlugin/js/jquery/plugins/jquery.layout-1.3.0/jquery.layout.js     # jquery.layout
-
     jquery.blockUI: /WacBaseAppPlugin/js/jquery/plugins/blockUI/jquery.blockUI.js     # jquery.blockUI
 
-#    jquery.grid.locale: /WacBaseAppPlugin/js/jquery/plugins/jquery.jqGrid-3.8.1/i18n/grid.locale-cn.js     # jqgrid.jqGrid.locale
-#    jquery.jqGrid: /WacBaseAppPlugin/js/jquery/plugins/jquery.jqGrid-3.8.1/jquery.jqGrid.min.js     # jquery.jqGrid
     jquery.grid.locale: /WacBaseAppPlugin/js/jquery/plugins/jquery.jqGrid-3.8.2/i18n/grid.locale-cn.js     # jqgrid.jqGrid.locale
     jquery.jqGrid: /WacBaseAppPlugin/js/jquery/plugins/jquery.jqGrid-3.8.2/jquery.jqGrid.min.js     # jquery.jqGrid
 
     jquery.validationEngine: /WacBaseAppPlugin/js/jquery/plugins/formValidator/jquery.validationEngine.js     # jquery.formValidator
     jquery.validationEngine.i18n: /WacBaseAppPlugin/js/jquery/plugins/formValidator/jquery.validationEngine-zh-cn.js     # jquery.validationEngine-zh
 
+    jquery.jstree: /WacBaseAppPlugin/js/jquery/plugins/jsTree.v.1.0rc2/jquery.jstree.js    # jquery.jstree
+
 #    - /WacBaseAppPlugin/js/jquery/plugins/jqueryStorage/jquery.Storage.js     # jquery.Storage
-    jquery.shout: /WacBaseAppPlugin/js/jquery/plugins/jquery-shout/jquery.shout.js     # jquery-shout
-#    jquery.prop-i18n: /WacBaseAppPlugin/js/jquery/plugins/jquery.prop-i18n/jquery.i18n.properties-min.js  #jquery.i18n.properties
-    jquery.prop-i18n: /WacBaseAppPlugin/js/jquery/plugins/jquery.prop-i18n/jquery.i18n.properties.js  #jquery.i18n.properties
     jquery.printElement: /WacBaseAppPlugin/js/jquery/plugins/printElement/jquery.printElement.min.js    # jquery.printElement
 
     wac.main: /WacBaseAppPlugin/js/wac/main.js  # wac_main
