--- a/trunk/WacERP/apps/backend/config/settings.yml
+++ b/trunk/WacERP/apps/backend/config/settings.yml
@@ -44,6 +44,7 @@ all:
       - wacCountry
       - wacPrint
       - wacSystemLog
+      - wacSystemParameter
     
     # Form security secret (CSRF protection)
 #    csrf_secret:            148e77f5b46de42f4caf4dd2c4ad25449ae4f0bb
