--- a/WacERP/apps/backend/config/settings.yml
+++ b/WacERP/apps/backend/config/settings.yml
@@ -45,6 +45,7 @@ all:
       - wacPrint
       - wacSystemLog
       - wacSystemParameter
+      - wacFileManager
     
     # Form security secret (CSRF protection)
 #    csrf_secret:            148e77f5b46de42f4caf4dd2c4ad25449ae4f0bb
