--- a/trunk/WacERP/plugins/WacBaseAppPlugin/config/app.yml
+++ b/trunk/WacERP/plugins/WacBaseAppPlugin/config/app.yml
@@ -7,6 +7,8 @@
 all:
   wac_setting:
     legal_website: http://WWW.WebAppClub.COM
+    images_path: /WacBaseAppPlugin/images/
+    js_path: /WacBaseAppPlugin/js/
     data_export_format:
       xml: xml
       json: json
