--- a/WacERP/plugins/WacBaseAppPlugin/config/view.yml
+++ b/WacERP/plugins/WacBaseAppPlugin/config/view.yml
@@ -66,6 +66,7 @@ default:
 
     jquery.plupload: /WacBaseAppPlugin/js/jquery/plugins/plupload/plupload.full.min.js    # jquery.plupload
     jquery.ui.plupload: /WacBaseAppPlugin/js/jquery/plugins/plupload/jquery.ui.plupload.min.js    # jquery.ui.plupload
+    jquery.plupload.i18n: /WacBaseAppPlugin/js/jquery/plugins/plupload/i18n/cn.js    # jquery.plupload.i18n
 
 #    - /WacBaseAppPlugin/js/jquery/plugins/jqueryStorage/jquery.Storage.js     # jquery.Storage
     jquery.printElement: /WacBaseAppPlugin/js/jquery/plugins/printElement/jquery.printElement.min.js    # jquery.printElement
