--- a/trunk/WacERP/plugins/WacBaseAppPlugin/config/app.yml
+++ b/trunk/WacERP/plugins/WacBaseAppPlugin/config/app.yml
@@ -23,5 +23,6 @@ all:
     data_print: _data_print
     show_data_export_form: _show_data_export_form
     show_data_print_form: _show_data_print_form
+    show_file_upload_form: _show_file_upload_form
     file_upload_finish: _file_upload_finish_evt
 
