--- a/WacERP/plugins/WacBaseAppPlugin/config/app.yml
+++ b/WacERP/plugins/WacBaseAppPlugin/config/app.yml
@@ -25,4 +25,5 @@ all:
     show_data_print_form: _show_data_print_form
     show_file_upload_form: _show_file_upload_form
     file_upload_finish: _file_upload_finish_evt
+    file_upload_complete: _file_upload_complete_evt
 
