--- a/trunk/WacERP/plugins/WacBaseAppPlugin/config/view.yml
+++ b/trunk/WacERP/plugins/WacBaseAppPlugin/config/view.yml
@@ -38,6 +38,10 @@ default:
     jquery.cookie: /WacBaseAppPlugin/js/jquery/jquery-1.4.2/jquery.cookie.js     # jquery.cookie
     jquery.hotkeys: /WacBaseAppPlugin/js/jquery/jquery-1.4.2/jquery.hotkeys.js     # jquery.hotkeys
 
+#    jquery: /WacBaseAppPlugin/js/jquery/jquery-1.4.4/jquery-1.4.4.min.js     # jquery
+#    jquery.cookie: /WacBaseAppPlugin/js/jquery/jquery-1.4.4/jquery.cookie.js     # jquery.cookie
+#    jquery.hotkeys: /WacBaseAppPlugin/js/jquery/jquery-1.4.4/jquery.hotkeys.js     # jquery.hotkeys
+
 #    jquery: /WacBaseAppPlugin/js/jquery/jquery-1.5/jquery-1.5.min.js     # jquery
 #    jquery.cookie: /WacBaseAppPlugin/js/jquery/jquery-1.5/jquery.cookie.js     # jquery.cookie
 #    jquery.hotkeys: /WacBaseAppPlugin/js/jquery/jquery-1.5/jquery.hotkeys.js     # jquery.hotkeys
