--- a/WacERP/plugins/WacBaseAppPlugin/config/view.yml
+++ b/WacERP/plugins/WacBaseAppPlugin/config/view.yml
@@ -34,7 +34,7 @@ default:
     wac.layout: /WacBaseAppPlugin/css/wac/layout.css
 
   javascripts:
-    jquery: /WacBaseAppPlugin/js/jquery/jquery-1.4.2/jquery-1.4.2.js     # jquery
+    jquery: /WacBaseAppPlugin/js/jquery/jquery-1.4.2/jquery-1.4.2.min.js     # jquery
     jquery.cookie: /WacBaseAppPlugin/js/jquery/jquery-1.4.2/jquery.cookie.js     # jquery.cookie
     jquery.hotkeys: /WacBaseAppPlugin/js/jquery/jquery-1.4.2/jquery.hotkeys.js     # jquery.hotkeys
 
