--- a/WacERP/apps/backend/config/settings.yml
+++ b/WacERP/apps/backend/config/settings.yml
@@ -25,6 +25,7 @@ test:
 all:
   .settings:
     enabled_modules:
+      #plugin's module
       - default
       - sfGuardAuth
       - sfGuardGroup
@@ -47,6 +48,7 @@ all:
       - wacSystemParameter
       - wacFileManager
       - wacCategory
+
     
     # Form security secret (CSRF protection)
 #    csrf_secret:            148e77f5b46de42f4caf4dd2c4ad25449ae4f0bb
@@ -64,7 +66,7 @@ all:
 
     standard_helpers:       [Partial, Cache, I18N, Date]
     charset:                utf-8
-    i18n:                   on
+    i18n:                   true
     default_culture:        zh_CN
 
     login_module:           sfGuardAuth
