--- a/trunk/WacERP/apps/backend/config/settings.yml
+++ b/trunk/WacERP/apps/backend/config/settings.yml
@@ -44,6 +44,7 @@ all:
       - wacGuardPermission
       - wacCountry
       - wacPrint
+      - wacSysmsg
       - wacSystemLog
       - wacSystemParameter
       - wacFileManager
