--- a/WacERP/plugins/WacBaseAppPlugin/config/app.yml
+++ b/WacERP/plugins/WacBaseAppPlugin/config/app.yml
@@ -27,6 +27,8 @@ all:
     search_in_list: _search_in_list_evt
     data_export: _data_export
     data_print: _data_print
+    data_saved: _data_saved
+    data_changed: _data_changed
     show_data_export_form: _show_data_export_form
     show_data_print_form: _show_data_print_form
     show_file_upload_form: _show_file_upload_form
