--- a/WacERP/plugins/WacBaseAppPlugin/config/view.yml
+++ b/WacERP/plugins/WacBaseAppPlugin/config/view.yml
@@ -78,6 +78,7 @@ default:
 #    jquery.plupload.i18n: /WacBaseAppPlugin/js/jquery/plugins/plupload/i18n/cn.js    # jquery.plupload.i18n
 
 #    - /WacBaseAppPlugin/js/jquery/plugins/jqueryStorage/jquery.Storage.js     # jquery.Storage
+    jquery.datalink: /WacBaseAppPlugin/js/jquery/plugins/jquery-datalink/jquery.datalink.js
     jquery.printElement: /WacBaseAppPlugin/js/jquery/plugins/printElement/jquery.printElement.min.js    # jquery.printElement
 
     wac.main: /WacBaseAppPlugin/js/wac/main.js  # wac_main
