--- a/trunk/WacERP/plugins/WacBaseAppPlugin/config/app.yml
+++ b/trunk/WacERP/plugins/WacBaseAppPlugin/config/app.yml
@@ -24,6 +24,7 @@ all:
 #    op_confirm_no: _confirm_no_evt
     show_add_form: _show_add_form_evt
     show_edit_form: _show_edit_form_evt
+    show_management_panel: _show_management_panel_evt
     search_in_list: _search_in_list_evt
     data_export: _data_export
     data_print: _data_print
