--- a/WacERP/plugins/WacBaseAppPlugin/config/app.yml
+++ b/WacERP/plugins/WacBaseAppPlugin/config/app.yml
@@ -40,5 +40,6 @@ all:
     show_data_print_form: _show_data_print_form
     show_file_upload_form: _show_file_upload_form
     show_tree_entity_dialog: _show_tree_entity_dialog
+    close_tree_entity_dialog: _close_tree_entity_dialog
     file_upload_complete: _file_upload_complete_evt
 
