--- a/trunk/WacERP/plugins/WacBaseAppPlugin/config/view.yml
+++ b/trunk/WacERP/plugins/WacBaseAppPlugin/config/view.yml
@@ -22,6 +22,7 @@ default:
 
 #    jquery.ui: /WacBaseAppPlugin/css/jquery/plugins/jquery-ui-1.8.9.custom/smoothness/jquery-ui-1.8.9.custom.css
     jquery.ui: /WacBaseAppPlugin/css/jquery/plugins/jquery-ui-1.8.14.custom/smoothness/jquery-ui-1.8.14.custom.css
+    ui.calculator: /WacBaseAppPlugin/css/jquery/plugins/jquery-calculator/calculator.css
 
     ui.panel: /WacBaseAppPlugin/css/jquery/plugins/ist-ui-panel/ui.panel.css
 
@@ -85,6 +86,7 @@ default:
 #    - /WacBaseAppPlugin/js/jquery/plugins/jqueryStorage/jquery.Storage.js     # jquery.Storage
     jquery.datalink: /WacBaseAppPlugin/js/jquery/plugins/jquery-datalink/jquery.datalink.js
     jquery.timers: /WacBaseAppPlugin/js/jquery/plugins/jquery.timers/jquery.timers.js
+    jquery.calculator: /WacBaseAppPlugin/js/jquery/plugins/jquery-calculator/calculator.js
     jquery.printElement: /WacBaseAppPlugin/js/jquery/plugins/printElement/jquery.printElement.min.js    # jquery.printElement
 
     wac.main: /WacBaseAppPlugin/js/wac/main.js  # wac_main
